第二次提交，已经完成蓝牙的连接，获取服务，并且可以跳转页面，蓝牙主体工作正常

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,9 @@
             "delay" : 0
         },
         /* 模块配置 */
-        "modules" : {},
+        "modules" : {
+            "Bluetooth" : {}
+        },
         /* 应用发布信息 */
         "distribute" : {
             /* android打包配置 */
@@ -54,7 +56,12 @@
         "setting" : {
             "urlCheck" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+        "permission" : {
+            "scope.userLocation" : {
+                "desc" : "连接蓝牙"
+            }
+        }
     },
     "mp-alipay" : {
         "usingComponents" : true
